--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -9,10 +9,12 @@
   padding: 0.75rem 1.125rem 0.75rem 1.125rem;
   font-weight: 600;
   text-decoration: none;
+  color: #2b2b2b;
   text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
 .selected {
   background-color: #ffffff;
+  color: #2b2b2b;
 }
