--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -2,6 +2,8 @@
   background-color: #f6de1e;
   box-shadow: 0 0 1.125rem #322f2f;
   margin-bottom: 2.25rem;
+  padding-top: 0.75rem;
+  padding-bottom: 1.5rem;
 }
 
 .navbar-light .navbar-nav .nav-link {
